test/type/wrong/div2.kk
val wrong : int = recursive()

function recursive(x) : div int  {
  recursive(wrong)
}